compiler/fir/analysis-tests/testData/resolveWithStdlib/problems/stringConstructors.kt
// FULL_JDK

val sRef = ::String
val s = <!DEPRECATION!>String<!>(byteArrayOf(1, 2, 3), 4, 5, 6)
